--- a/CmsFui/CmsFui.Android/CmsFui.Android.csproj
+++ b/CmsFui/CmsFui.Android/CmsFui.Android.csproj
@@ -125,5 +125,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\hideRipple.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\backarrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pro.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
