--- a/CmsFui/CmsFui/CmsFui.csproj
+++ b/CmsFui/CmsFui/CmsFui.csproj
@@ -11,8 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Fonts\Montserrat-Light.ttf" />
-    <None Remove="Resources\Fonts\Montserrat-Regular.ttf" />
+    <Compile Remove="CustomRenderer\**" />
+    <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="CustomRenderer\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="CustomRenderer\**" />
+    <None Remove="Resources\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,17 +39,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CustomRenderer\" />
-    <Folder Include="Resources\Fonts\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Update="Views\StudentLoginView.xaml.cs">
       <DependentUpon>StudentLoginView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\MainView\DashboardContentView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainView\DashboardView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MainView\MainView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
