--- a/CmsFui/CmsFui.Android/CmsFui.Android.csproj
+++ b/CmsFui/CmsFui.Android/CmsFui.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Syncfusion.Xamarin.Core">
       <Version>18.1.0.55</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfChart">
+      <Version>18.1.0.55</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfComboBox">
       <Version>18.1.0.55</Version>
     </PackageReference>
