--- a/CmsFui/CmsFui.iOS/CmsFui.iOS.csproj
+++ b/CmsFui/CmsFui.iOS/CmsFui.iOS.csproj
@@ -140,6 +140,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfNumericTextBox">
       <Version>18.1.0.55</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
+      <Version>18.1.0.55</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
