--- a/CmsFui/CmsFui/CmsFui.csproj
+++ b/CmsFui/CmsFui/CmsFui.csproj
@@ -75,4 +75,8 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controller\" />
+  </ItemGroup>
 </Project>
