--- a/CmsFui/CmsFui.Android/CmsFui.Android.csproj
+++ b/CmsFui/CmsFui.Android/CmsFui.Android.csproj
@@ -62,6 +62,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfComboBox">
       <Version>18.1.0.55</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfListView">
+      <Version>18.1.0.55</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfMaskedEdit">
       <Version>18.1.0.55</Version>
     </PackageReference>
@@ -72,6 +75,9 @@
       <Version>18.1.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
+      <Version>18.1.0.55</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh">
       <Version>18.1.0.55</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
