--- a/CmsFui/CmsFui/CmsFui.csproj
+++ b/CmsFui/CmsFui/CmsFui.csproj
@@ -24,10 +24,12 @@
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.1.0.55" />
     <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.1.0.55" />
     <PackageReference Include="Syncfusion.Xamarin.SfComboBox" Version="18.1.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.1.0.55" />
     <PackageReference Include="Syncfusion.Xamarin.SfMaskedEdit" Version="18.1.0.55" />
     <PackageReference Include="Syncfusion.Xamarin.SfNavigationDrawer" Version="18.1.0.55" />
     <PackageReference Include="Syncfusion.Xamarin.SfNumericTextBox" Version="18.1.0.55" />
     <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.1.0.55" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh" Version="18.1.0.55" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
