--- a/CmsFuiApiV1/Properties/launchSettings.json
+++ b/CmsFuiApiV1/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     },
     "CmsFuiApiV1": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
       "environmentVariables": {
